# AndroidLogin

./: README.md
app/: build.gradle.kts  keystore.jks  proguard-rules.pro
app/src/androidTest/java/com/example/redrocker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c  vm_protection.c  vm_protection.h
app/src/main/java/com/example/redrocker/: JniBridge.java  MainActivity.java  NetworkUtils.java
app/src/main/java/com/example/redrocker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/redrocker/: ExampleUnitTest.kt
